--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -13,7 +13,9 @@
 <button><a th:href="@{/addProduct.do}">상품추가하기</a></button>
 <button><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
 <button><a th:href="@{/productList.do}">상품목록 조회</a></button>
+<button><a th:href="@{/orderList.do}">주문 내역 조회</a></button>
 <button><a th:href="@{/productUpdate.do}">상품 수정</a></button>
+
 
     <div th:text="${#authentication.name}"></div>
     <div th:text="${#authentication.principal.username}"></div>
