--- a/src/main/resources/templates/order_history.html
+++ b/src/main/resources/templates/order_history.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Your Order History</title>
-    <!-- Include Bootstrap CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>전체 상품 보기</title>
+    <!-- Bootstrap core CSS -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/css/custom.css" rel="stylesheet">
+    <style>
+        
+        .product {
+            border: 4px solid rgb(0, 0, 0);
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+
+        .info-label {
+            margin-right: 20px;
+        }
+    </style>
 </head>
+
 <body>
+<!-- Top Bar -->
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 <div class="container">
     <h1 class="mt-5 mb-4">Your Order History</h1>
     <table class="table">
@@ -56,7 +77,6 @@
                     <p>상품 설명: <span th:text="${order.productDescription}"></span></p>
                     <p>상품 가격: <span th:text="${order.productPrice}"></span></p>
                     <p>주문 날짜: <span th:text="${order.ordersDate}"></span></p>
-                    <!-- Add more order details as needed -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-toggle="modal" th:data-target="'#cancelOrderModal' + ${order.ordersId}">주문 취소</button>
