주문 취소된 상품은 다시 보이도록 수정

--- a/src/main/resources/templates/productlist.html
+++ b/src/main/resources/templates/productlist.html
@@ -131,7 +131,7 @@
 								/* 페이지 로딩 시 실행하여 가격 값을 변환하여 출력 */
 								document.addEventListener("DOMContentLoaded", function () {
 									var itemPrice = /*[[${item?.productPrice}]]*/ 0; // 실제 가격값으로 변경
-									var formattedPriceSpan = document.getElementById('formattedPrice' + /*[[${item.productId}]]*/);
+									var formattedPriceSpan = document.getElementById('formattedPrice' + /*[[${item.productId}]]*/0);
 									formattedPriceSpan.textContent = formatPrice(itemPrice); // 가격을 포맷팅하여 출력
 								});
 							</script>
