--- a/src/main/resources/templates/order_history.html
+++ b/src/main/resources/templates/order_history.html
@@ -10,7 +10,7 @@
     <!-- Custom styles for this template -->
     <link href="/css/custom.css" rel="stylesheet">
     <style>
-        
+
         .product {
             border: 4px solid rgb(0, 0, 0);
             padding: 10px;
@@ -49,6 +49,32 @@
             <td>
                 <button class="btn btn-primary" th:attr="data-toggle='modal', data-target='#orderModal' + ${order.ordersId}">주문 상세 보기</button>
             </td>
+            <!-- Add more columns as needed -->
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="container">
+    <h1 class="mt-5 mb-4">Your Canceled History</h1>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">상품 이름</th>
+            <th scope="col">상품 설명</th>
+            <th scope="col">상품 가격</th>
+            <th scope="col">주문 날짜</th>
+            <th scope="col">주문 상세 보기</th>
+            <!-- Add more columns as needed -->
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="order : ${orderCanceled}">
+            <td th:text="${order.productName}"></td>
+            <td th:text="${order.productDescription}"></td>
+            <td th:text="${order.productPrice}"></td>
+            <td th:text="${order.ordersDate}"></td>
+         	<td th:text="주문취소"></td>
             <!-- Add more columns as needed -->
         </tr>
         </tbody>
