--- a/src/main/resources/templates/messageRedirect.html
+++ b/src/main/resources/templates/messageRedirect.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="header :: main-head"></head>
+<head th:replace="post_header :: main-head"></head>
 <body>
 <form th:if="${not #maps.isEmpty( params.data )}" id="redirectForm" th:action="${params.redirectUri}" th:method="${params.method}" style="display: none;">
     <input th:each="key, status : ${params.data.keySet()}" type="hidden" th:name="${key}" th:value="${params.data.get(key)}" />
