--- a/src/main/resources/templates/post_view.html
+++ b/src/main/resources/templates/post_view.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="/header">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="/header">
 <th:block layout:fragment="title">
-    <head th:replace="post_header :: main-head"> </head>
+    <meta charset="UTF-8">
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
+
+
+    <head th:replace="post_header :: main-head"></head>
     <title>상세 페이지</title>
 </th:block>
 
@@ -11,7 +16,10 @@
         <section>
             <table class="tb tb_row">
                 <colgroup>
-                    <col style="width:10%;"/><col style="width:23%;"/><col style="width:10%;"/><col style="width:23%;"/>
+                    <col style="width:10%;"/>
+                    <col style="width:23%;"/>
+                    <col style="width:10%;"/>
+                    <col style="width:23%;"/>
                 </colgroup>
                 <tbody>
                 <tr>
@@ -48,61 +56,216 @@
                 <button type="button" onclick="deletePost();" class="btns btn_bdr1 btn_mid">삭제</button>
                 <a th:href="@{/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
             </p>
+            <!--/* 댓글 작성 */-->
+            <div class="cm_write">
+                <fieldset>
+                    <legend class="skipinfo">댓글 입력</legend>
+                    <div class="cm_input">
+                        <p><textarea id="content" name="content" onkeyup="countingLength(this);" cols="90" rows="4"
+                                     placeholder="댓글을 입력해 주세요."></textarea></p>
+                        <span><button type="button" class="btns" onclick="saveComment();">등 록</button> <i id="counter">0/300자</i></span>
+
+                    </div>
+
+                </fieldset>
+            </div>
+            <!--/* 댓글 렌더링 영역 */-->
+            <div class="cm_list">
+
+            </div>
         </section>
     </div> <!--/* .content */-->
 </th:block>
 
 <th:block layout:fragment="script">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script th:inline="javascript">
         /*<![CDATA[*/
 
-            window.onload = () => {
-                findAllFile();
+               window.onload = () => {
+        findAllComment();
+    }
 
-                findAllComment();
+
+        // 전체 댓글 조회
+    function findAllComment() {
+
+        const postId = [[ ${post.id} ]];
+
+        $.ajax({
+            url : `/${postId}/comments`,
+            type : 'get',
+            dataType : 'json',
+            async : false,
+            success : function (response) {
+
+                // 1. 조회된 데이터가 없는 경우
+                if ( !response.length ) {
+                    document.querySelector('.cm_list').innerHTML = '<div class="cm_none"><p>등록된 댓글이 없습니다.</p></div>';
+                    return false;
+                }
+
+                // 2. 렌더링 할 HTML을 저장할 변수
+                let commentHtml = '';
+
+                // 3. 댓글 HTML 추가
+                response.forEach(row => {
+                    commentHtml += `
+                        <div>
+                            <span class="writer_img"><img src="/images/default_profile.png" width="30" height="30" alt="기본 프로필 이미지"/></span>
+                            <p class="writer">
+                                <em>${row.writer}</em>
+                                <span class="date">${dayjs(row.createdDate).format('YYYY-MM-DD HH:mm')}</span>
+                            </p>
+                            <div class="cont"><div class="txt_con">${row.content}</div></div>
+                            <p class="func_btns">
+                                <button type="button" class="btns"><span class="icons icon_modify">수정</span></button>
+                                <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
+                            </p>
+                        </div>
+                    `;
+                })
+
+                // 4. class가 "cm_list"인 요소를 찾아 HTML을 렌더링
+                document.querySelector('.cm_list').innerHTML = commentHtml;
+            },
+            error : function (request, status, error) {
+                console.log(error)
             }
+        })
+    }
 
             // 게시글 삭제
             function deletePost() {
+
                 const id = [[ ${post.id} ]];
 
                 if ( !confirm(id + '번 게시글을 삭제할까요?') ) {
                     return false;
                 }
 
+                let inputHtml = '';
+
+                new URLSearchParams(location.search).forEach((value, key) => {
+                    inputHtml += `<input type="hidden" name="${key}" value="${value}" />`;
+                })
+
                 const formHtml = `
                     <form id="deleteForm" action="/delete.do" method="post">
-                        <input type="hidden" id="id" name="id" value="${id}" />
+                        ${inputHtml}
                     </form>
                 `;
+
                 const doc = new DOMParser().parseFromString(formHtml, 'text/html');
                 const form = doc.body.firstChild;
                 document.body.append(form);
                 document.getElementById('deleteForm').submit();
             }
 
-    // 전체 파일 조회
-    function findAllFile() {
 
-        // 1. API 호출
-        const postId = [[ ${post.id}]];
-        const response = getJson(`/${postId}/files`);
+            // 게시글 수정 페이지로 이동
+            function goWritePage() {
+                location.href = '/write.do' + location.search;
+            }
 
-        // 2. 로직 종료
-        if ( !response.length ) {
-            return false;
+
+            // 게시글 리스트 페이지로 이동
+            function goListPage() {
+                const queryString = new URLSearchParams(location.search);
+                queryString.delete('id');
+                location.href = '/list.do' + '?' + queryString.toString();
+            }
+
+
+            // 댓글 길이 카운팅
+            function countingLength(content) {
+                if (content.value.length > 300) {
+                    alert('댓글을 300자 이하로 입력해 주세요.');
+                    content.value = content.value.substring(0, 300);
+                    content.focus();
+                }
+                document.getElementById('counter').innerText = content.value.length + '/300자';
+            }
+
+
+               // 댓글 저장
+    function saveComment() {
+
+        const content = document.getElementById('content');
+
+        const postId = [[ ${post.id} ]];
+        const params = {
+            postId : postId,
+            content : content.value,
+            writer : '홍길동'
         }
 
-        // 3. 파일 영역 추가
-        let fileHtml = '<div class="file_down"><div class="cont">';
-        response.forEach(row => {
-            fileHtml += `<a href="javascript:alert('준비 중입니다.');"><span class="icons"><i class="fas fa-folder-open"></i></span>${row.originalName}</a>`;
+        $.ajax({
+            url : `/${postId}/comments`,
+            type : 'post',
+            contentType : 'application/json; charset=utf-8',
+            dataType : 'json',
+            data : JSON.stringify(params),
+            async : false,
+            success : function (response) {
+                alert('저장되었습니다.');
+                content.value = '';
+                document.getElementById('counter').innerText = '0/300자';
+                findAllComment();
+            },
+            error : function (request, status, error) {
+                console.log(error)
+            }
         })
-        fileHtml += '</div></div>';
-
-        // 4. 파일 HTML 렌더링
-        document.getElementById('files').innerHTML = fileHtml;
     }
+
+            // 댓글 삭제
+            function deleteComment(id) {
+
+                if ( !confirm('선택하신 댓글을 삭제할까요?') ) {
+                    return false;
+                }
+
+                const postId = [[ ${post.id} ]];
+                const uri = `/${postId}/comments/${id}`;
+                callApi(uri, 'delete');
+                alert('삭제되었습니다.');
+                findAllComment();
+            }
+
+
+            // 댓글 HTML draw
+            function drawComments(list) {
+
+                if ( !list.length ) {
+                    document.querySelector('.cm_list').innerHTML = '<div class="cm_none"><p>등록된 댓글이 없습니다.</p></div>';
+                    return false;
+                }
+
+                let commentHtml = '';
+
+                list.forEach(row => {
+                    commentHtml += `
+                        <div>
+                            <span class="writer_img"><img src="/images/default_profile.png" width="30" height="30" alt="기본 프로필 이미지"/></span>
+                            <p class="writer">
+                                <em>${row.writer}</em>
+                                <span class="date">${dayjs(row.createdDate).format('YYYY-MM-DD HH:mm')}</span>
+                            </p>
+                            <div class="cont"><div class="txt_con">${row.content}</div></div>
+                            <p class="func_btns">
+                                <button type="button" onclick="openCommentUpdatePopup(${row.id});" class="btns"><span class="icons icon_modify">수정</span></button>
+                                <button type="button" onclick="deleteComment(${row.id});" class="btns"><span class="icons icon_del">삭제</span></button>
+                            </p>
+                        </div>
+                    `;
+                })
+
+                document.querySelector('.cm_list').innerHTML = commentHtml;
+            }
+
+
+
         /*]]>*/
     </script>
 </th:block>
