--- a/src/main/resources/templates/post_write.html
+++ b/src/main/resources/templates/post_write.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/basic">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head th:replace="post_header :: main-head"> </head>
 
 </html>
@@ -20,6 +19,8 @@
     <div class="content">
         <section>
             <form id="saveForm" method="post" autocomplete="off" enctype="multipart/form-data">
+
+
                 <!--/* 게시글 수정인 경우, 서버로 전달할 게시글 번호 (PK) */-->
                 <input type="hidden" id="id" name="id" th:if="${post != null}" th:value="${post.id}" />
 
@@ -88,169 +89,169 @@
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-        /*<![CDATA[*/
+        window.onload = () => {
+            renderPostInfo();
 
-               window.onload = () => {
-        renderPostInfo();
-
-        findAllFile();
-    }
-
-
-    // 전체 파일 조회
-    function findAllFile() {
-
-        // 1. 신규 등록/수정 체크
-        const post = [[ ${post}]];
-        if ( !post ) {
-            return false;
+            findAllFile();
         }
 
-        // 2. API 호출
-        const response = getJson(`/[[ ${post}]]/files`);
 
-        // 3. 로직 종료
-        if ( !response.length ) {
-            return false;
+        // 전체 파일 조회
+        function findAllFile() {
+
+            // 1. 신규 등록/수정 체크
+            const post = [[ ${post}]];
+            if ( !post ) {
+                return false;
+            }
+
+            // 2. API 호출
+            const response = `/${post.id}/files`;
+            // 3. 로직 종료
+            if ( !response.length ) {
+                return false;
+            }
+
+            // 4. 업로드 영역 추가
+            for (let i = 0, len = (response.length - 1); i < len; i++) {
+                addFile();
+            }
+
+            // 5. 파일 선택 & 삭제 이벤트 재선언 & 파일명 세팅
+            const filenameInputs = document.querySelectorAll('.file_list input[type="text"]');
+            filenameInputs.forEach((input, i) => {
+                const fileInput = input.nextElementSibling.firstElementChild;
+                const fileRemoveBtn = input.parentElement.nextElementSibling;
+                fileInput.setAttribute('onchange', `selectFile(this, ${response[i].id})`);
+                fileRemoveBtn.setAttribute('onclick', `removeFile(this, ${response[i].id})`);
+                input.value = response[i].originalName;
+            })
         }
 
-        // 4. 업로드 영역 추가
-        for (let i = 0, len = (response.length - 1); i < len; i++) {
-            addFile();
+
+
+
+
+         //게시글 상세정보 렌더링
+            function renderPostInfo() {
+            const post = [[ ${post} ]];
+
+            if ( !post ) {
+                initCreatedDate();
+                return false;
+            }
+
+            const form = document.getElementById('saveForm');
+            const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
+            form.isNotice.checked = post.noticeYn;
+            form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
+
+
+            fields.forEach(field => {
+                form[field].value = post[field];
+            })
         }
 
-        // 5. 파일 선택 & 삭제 이벤트 재선언 & 파일명 세팅
-        const filenameInputs = document.querySelectorAll('.file_list input[type="text"]');
-        filenameInputs.forEach((input, i) => {
-            const fileInput = input.nextElementSibling.firstElementChild;
-            const fileRemoveBtn = input.parentElement.nextElementSibling;
-            fileInput.setAttribute('onchange', `selectFile(this, ${response[i].id})`);
-            fileRemoveBtn.setAttribute('onclick', `removeFile(this, ${response[i].id})`);
-            input.value = response[i].originalName;
-        })
-    }
 
-
-     //게시글 상세정보 렌더링
-        function renderPostInfo() {
-        const post = [[ ${post} ]];
-
-        if ( !post ) {
-            initCreatedDate();
-            return false;
+        // 등록일 초기화
+        function initCreatedDate() {
+            document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD HH:mm');
         }
 
-        const form = document.getElementById('saveForm');
-        const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
-        form.isNotice.checked = post.noticeYn;
-        form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
 
+        // 게시글 저장(수정)
 
-        fields.forEach(field => {
-            form[field].value = post[field];
-        })
-    }
+        function savePost() {
+            const form = document.getElementById('saveForm');
+            const fields = [form.title, form.writer, form.content];
+            const fieldNames = ['제목', '이름', '내용'];
+            alert("저장하시겠습니까?") //작동함
 
+            document.getElementById('saveBtn').disabled = true;
+            form.noticeYn.value = form.isNotice.checked;
+            form.removeFileIds.value = removeFileId.getAll().join();
+            form.action = [[ ${post == null} ]] ? '/save.do' : '/update.do';
+            form.submit();
 
-    // 등록일 초기화
-    function initCreatedDate() {
-        document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD HH:mm');
-    }
-
-
-    // 게시글 저장(수정)
-
-    function savePost() {
-        const form = document.getElementById('saveForm');
-        const fields = [form.title, form.writer, form.content];
-        const fieldNames = ['제목', '이름', '내용'];
-        alert("저장하시겠습니까?") //작동함
-
-        document.getElementById('saveBtn').disabled = true;
-        form.noticeYn.value = form.isNotice.checked;
-        form.removeFileIds.value = removeFileId.getAll().join();
-        form.action = [[ ${post == null} ]] ? '/save.do' : '/update.do';
-        form.submit();
-
-    }
-        // 파일 삭제 처리용 익명 함수
-    const removeFileId = (function() {
-        const ids = [];
-        return {
-            add(id) {
-                if (ids.includes(id)) {
-                    return false;
+        }
+            // 파일 삭제 처리용 익명 함수
+        const removeFileId = (function() {
+            const ids = [];
+            return {
+                add(id) {
+                    if (ids.includes(id)) {
+                        return false;
+                    }
+                    ids.push(id);
+                },
+                getAll() {
+                    return ids;
                 }
-                ids.push(id);
-            },
-            getAll() {
-                return ids;
+            }
+        }());
+                // 파일 선택
+        function selectFile(element,id) {
+
+            const file = element.files[0];
+            const filename = element.closest('.file_input').firstElementChild;
+
+            // 1. 파일 선택 창에서 취소 버튼이 클릭된 경우
+            if ( !file ) {
+                filename.value = '';
+                return false;
+            }
+
+            // 2. 파일 크기가 10MB를 초과하는 경우
+            const fileSize = Math.floor(file.size / 1024 / 1024);
+            if (fileSize > 10) {
+                alert('10MB 이하의 파일로 업로드해 주세요.');
+                filename.value = '';
+                element.value = '';
+                return false;
+            }
+
+            // 3. 파일명 지정
+            filename.value = file.name;
+            //4 삭제할 파일 id 추가
+            if(id){
+            removeFileId.add(id);
             }
         }
-    }());
-            // 파일 선택
-    function selectFile(element,id) {
 
-        const file = element.files[0];
-        const filename = element.closest('.file_input').firstElementChild;
 
-        // 1. 파일 선택 창에서 취소 버튼이 클릭된 경우
-        if ( !file ) {
-            filename.value = '';
-            return false;
+        // 파일 추가
+        function addFile() {
+            const fileDiv = document.createElement('div');
+            fileDiv.innerHTML =`
+                <div class="file_input">
+                    <input type="text" readonly />
+                    <label> 첨부파일
+                        <input type="file" name="files" onchange="selectFile(this);" />
+                    </label>
+                </div>
+                <button type="button" onclick="removeFile(this);" class="btns del_btn"><span>삭제</span></button>
+            `;
+            document.querySelector('.file_list').appendChild(fileDiv);
         }
 
-        // 2. 파일 크기가 10MB를 초과하는 경우
-        const fileSize = Math.floor(file.size / 1024 / 1024);
-        if (fileSize > 10) {
-            alert('10MB 이하의 파일로 업로드해 주세요.');
-            filename.value = '';
-            element.value = '';
-            return false;
-        }
 
-        // 3. 파일명 지정
-        filename.value = file.name;
-        //4 삭제할 파일 id 추가
+        // 파일 삭제
+        function removeFile(element,id) {
+
+        //삭제할 파일 id 추가
         if(id){
         removeFileId.add(id);
         }
-    }
-
-
-    // 파일 추가
-    function addFile() {
-        const fileDiv = document.createElement('div');
-        fileDiv.innerHTML =`
-            <div class="file_input">
-                <input type="text" readonly />
-                <label> 첨부파일
-                    <input type="file" name="files" onchange="selectFile(this);" />
-                </label>
-            </div>
-            <button type="button" onclick="removeFile(this);" class="btns del_btn"><span>삭제</span></button>
-        `;
-        document.querySelector('.file_list').appendChild(fileDiv);
-    }
-
-
-    // 파일 삭제
-    function removeFile(element,id) {
-
-    //삭제할 파일 id 추가
-    if(id){
-    removeFileId.add(id);
-    }
-    // 파일 영역 초기화 & 삭제
-        const fileAddBtn = element.nextElementSibling;
-        if (fileAddBtn) {
-            const inputs = element.previousElementSibling.querySelectorAll('input');
-            inputs.forEach(input => input.value = '')
-            return false;
+        // 파일 영역 초기화 & 삭제
+            const fileAddBtn = element.nextElementSibling;
+            if (fileAddBtn) {
+                const inputs = element.previousElementSibling.querySelectorAll('input');
+                inputs.forEach(input => input.value = '')
+                return false;
+            }
+            element.parentElement.remove();
         }
-        element.parentElement.remove();
-    }
-        /*]]>*/
+            /*]]>*/
     </script>
 </th:block>
 </html>
