--- a/src/main/resources/templates/post_view.html
+++ b/src/main/resources/templates/post_view.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="/header">
+      layout:decorator="/post_header">
 <th:block layout:fragment="title">
     <meta charset="UTF-8">
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
@@ -74,7 +74,33 @@
 
             </div>
         </section>
-    </div> <!--/* .content */-->
+    </div>
+    <!--/* 댓글 수정 popup */-->
+    <div id="commentUpdatePopup" class="popLayer">
+        <h3>댓글 수정</h3>
+        <div class="pop_container">
+            <table class="tb tb_row tl">
+                <colgroup>
+                    <col style="width:30%;" /><col style="width:70%;" />
+                </colgroup>
+                <tbody>
+                <tr>
+                    <th scope="row">작성자<span class="es">필수 입력</span></th>
+                    <td><input type="text" id="modalWriter" name="modalWriter" placeholder="작성자를 입력해 주세요." /></td>
+                </tr>
+                <tr>
+                    <th scope="row">내용<span class="es">필수 입력</span></th>
+                    <td><textarea id="modalContent" name="modalContent" cols="90" rows="10" placeholder="수정할 내용을 입력해 주세요."></textarea></td>
+                </tr>
+                </tbody>
+            </table>
+            <p class="btn_set">
+                <button type="button" id="commentUpdateBtn" class="btns btn_st2">수정</button>
+                <button type="button" class="btns btn_bdr2" onclick="closeCommentUpdatePopup();">삭제</button>
+            </p>
+        </div>
+        <button type="button" class="btn_close" onclick="closeCommentUpdatePopup();"><span><i class="far fa-times-circle"></i></span></button>
+    </div>
 </th:block>
 
 <th:block layout:fragment="script">
@@ -119,8 +145,9 @@
                             </p>
                             <div class="cont"><div class="txt_con">${row.content}</div></div>
                             <p class="func_btns">
-                                <button type="button" class="btns"><span class="icons icon_modify">수정</span></button>
-                                <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
+
+        <button type="button" onclick="openCommentUpdatePopup(${row.id});" class="btns"><span class="icons icon_modify">수정</span></button>
+        <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
                             </p>
                         </div>
                     `;
@@ -186,6 +213,20 @@
                 }
                 document.getElementById('counter').innerText = content.value.length + '/300자';
             }
+function layerPop(popName){
+	var $layer = $("#"+ popName);
+	$layer.fadeIn(500).css('display', 'inline-block').wrap( '<div class="overlay_t"></div>');
+	$('body').css('overflow','hidden');
+}
+function layerPopClose(){
+	$(".popLayer").hide().unwrap( '');
+	$('body').css('overflow','auto');
+	$(".popLayer video").each(function() { this.pause(); this.load(); });
+}
+function layerPopClose2(popName){
+	$("#"+ popName).hide().unwrap( '');
+	$('body').css('overflow','auto');
+}
 
 
                // 댓글 저장
@@ -218,6 +259,65 @@
             }
         })
     }
+// 댓글 수정 팝업 open
+    function openCommentUpdatePopup(id) {
+
+        const postId = [[ ${post.id} ]];
+
+        $.ajax({
+            url : `/${postId}/comments/${id}`,
+            type : 'get',
+            dataType : 'json',
+            async : false,
+            success : function (response) {
+                document.getElementById('modalWriter').value = response.writer;
+                document.getElementById('modalContent').value = response.content;
+                document.getElementById('commentUpdateBtn').setAttribute('onclick', `updateComment(${id})`);
+                layerPop('commentUpdatePopup');
+            },
+            error : function (request, status, error) {
+                console.log(error)
+            }
+        })
+    }
+    // 댓글 수정
+    function updateComment(id) {
+
+        const writer = document.getElementById('modalWriter');
+        const content = document.getElementById('modalContent');
+
+        const postId = [[ ${post.id} ]];
+        const params = {
+            id : id,
+            postId : postId,
+            content : content.value,
+            writer : writer.value
+        }
+
+        $.ajax({
+            url : `/${postId}/comments/${id}`,
+            type : 'patch',
+            contentType : 'application/json; charset=utf-8',
+            dataType : 'json',
+            data : JSON.stringify(params),
+            async : false,
+            success : function (response) {
+                alert('수정되었습니다.');
+                closeCommentUpdatePopup();
+                findAllComment();
+            },
+            error : function (request, status, error) {
+                console.log(error)
+            }
+        })
+    }
+
+    // 댓글 수정 팝업 close
+    function closeCommentUpdatePopup() {
+        document.querySelectorAll('#modalContent, #modalWriter').forEach(element => element.value = '');
+        document.getElementById('commentUpdateBtn').removeAttribute('onclick');
+        layerPopClose('commentUpdatePopup');
+    }
 
             // 댓글 삭제
             function deleteComment(id) {
@@ -234,35 +334,8 @@
             }
 
 
-            // 댓글 HTML draw
-            function drawComments(list) {
 
-                if ( !list.length ) {
-                    document.querySelector('.cm_list').innerHTML = '<div class="cm_none"><p>등록된 댓글이 없습니다.</p></div>';
-                    return false;
-                }
 
-                let commentHtml = '';
-
-                list.forEach(row => {
-                    commentHtml += `
-                        <div>
-                            <span class="writer_img"><img src="/images/default_profile.png" width="30" height="30" alt="기본 프로필 이미지"/></span>
-                            <p class="writer">
-                                <em>${row.writer}</em>
-                                <span class="date">${dayjs(row.createdDate).format('YYYY-MM-DD HH:mm')}</span>
-                            </p>
-                            <div class="cont"><div class="txt_con">${row.content}</div></div>
-                            <p class="func_btns">
-                                <button type="button" onclick="openCommentUpdatePopup(${row.id});" class="btns"><span class="icons icon_modify">수정</span></button>
-                                <button type="button" onclick="deleteComment(${row.id});" class="btns"><span class="icons icon_del">삭제</span></button>
-                            </p>
-                        </div>
-                    `;
-                })
-
-                document.querySelector('.cm_list').innerHTML = commentHtml;
-            }
 
 
 
