order_complete 중간정렬

--- a/src/main/resources/templates/order_complete.html
+++ b/src/main/resources/templates/order_complete.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/custom.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -27,6 +26,8 @@
 </head>
 <body>
 <nav th:replace="~{navbar :: navbarFragment}"></nav>
+<div class="text-center mt-5">
+
 <h2>주문이 완료되었습니다!</h2>
 <!-- 주문 정보나 확인 메시지 등을 추가할 수 있습니다. -->
 <p>주문이 성공적으로 처리되었습니다.</p>
@@ -46,6 +47,7 @@
     <input type="hidden" th:value="${paymentMethod}" id="paymentMethod">
     <input type="hidden" th:value="${userId}" id="userId">
     <a href="/order-history" id="checkOrderButton" class="btn btn-primary">주문 내역 확인하기</a>
+</div>
 </div>
 <script src="/js/readyRequestPay.js"></script>
 </body>
