--- a/src/main/resources/templates/post_view.html
+++ b/src/main/resources/templates/post_view.html
@@ -147,7 +147,7 @@
                             <p class="func_btns">
 
         <button type="button" onclick="openCommentUpdatePopup(${row.id});" class="btns"><span class="icons icon_modify">수정</span></button>
-        <button type="button" class="btns"><span class="icons icon_del">삭제</span></button>
+            <button type="button" onclick="deleteComment(${row.id});" class="btns"><span class="icons icon_del">삭제</span></button>
                             </p>
                         </div>
                     `;
@@ -319,19 +319,29 @@ function layerPopClose2(popName){
         layerPopClose('commentUpdatePopup');
     }
 
-            // 댓글 삭제
-            function deleteComment(id) {
+              // 댓글 삭제
+    function deleteComment(id) {
 
-                if ( !confirm('선택하신 댓글을 삭제할까요?') ) {
-                    return false;
-                }
+        if ( !confirm('선택하신 댓글을 삭제할까요?') ) {
+            return false;
+        }
 
-                const postId = [[ ${post.id} ]];
-                const uri = `/${postId}/comments/${id}`;
-                callApi(uri, 'delete');
+        const postId = [[ ${post.id} ]];
+
+        $.ajax({
+            url : `/${postId}/comments/${id}`,
+            type : 'delete',
+            dataType : 'json',
+            async : false,
+            success : function (response) {
                 alert('삭제되었습니다.');
                 findAllComment();
+            },
+            error : function (request, status, error) {
+                console.log(error)
             }
+        })
+    }
 
 
 
