--- a/src/main/resources/templates/post_view.html
+++ b/src/main/resources/templates/post_view.html
@@ -108,8 +108,9 @@
     <script th:inline="javascript">
         /*<![CDATA[*/
 
-               window.onload = () => {
+     window.onload = () => {
         findAllComment();
+        findAllFile()
     }
 
 
@@ -343,6 +344,50 @@ function layerPopClose2(popName){
         })
     }
 
+              // 전체 파일 조회
+            function findAllFile() {
+
+                // 1. API 호출
+                const postId = [[ ${post.id}]];
+                const response = getJson(`/${postId}/files`);
+
+function getJson(uri, params) {
+
+    let json = {}
+
+    $.ajax({
+        url : uri,
+        type : 'get',
+        dataType : 'json',
+        data : params,
+        async : false,
+        success : function (response) {
+            json = response;
+        },
+        error : function (request, status, error) {
+            console.log(error)
+        }
+    })
+
+    return json;
+}
+
+
+                // 2. 로직 종료
+                if ( !response.length ) {
+                    return false;
+                }
+
+                // 3. 파일 영역 추가
+                let fileHtml = '<div class="file_down"><div class="cont">';
+                response.forEach(row => {
+                    fileHtml += `<a href="javascript:alert('준비 중입니다.');"><span class="icons"><i class="fas fa-folder-open"></i></span>${row.originalName}</a>`;
+                })
+                fileHtml += '</div></div>';
+
+                // 4. 파일 HTML 렌더링
+                document.getElementById('files').innerHTML = fileHtml;
+            }
 
 
 
