--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <title>주문 페이지</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .product {
+            border: 4px solid rgb(0, 0, 0);
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        .product-info {
+            border-left: 4px solid black;
+            padding-left: 12px;
+        }
+    </style>
 </head>
 <body>
-
+<nav th:replace="~{navbar :: navbarFragment}"></nav>
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
