--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -4,22 +4,32 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="/js/Admin.js"></script>
 
-<div th:text="${data}"></div>
-<div id="userListTable">
-선택해주세요
-</div>
-<button onclick="getUserList()">회원정보 보기</button>
-<button><a th:href="@{/adminMail.do}">메일보내기</a></button>
-<button><a th:href="@{/addProduct.do}">상품추가하기</a></button>
-<button><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
-<button><a th:href="@{/productList.do}">상품목록 조회</a></button>
-<button><a th:href="@{/productUpdate.do}">상품 수정</a></button>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-12">
 
-    <div th:text="${#authentication.name}"></div>
-    <div th:text="${#authentication.principal.username}"></div>
-    <div th:if="${#authentication.isAuthenticated()}">
-        <p>인증된 사용자입니다.</p>
+                <div th:text="${data}"></div>
+                <div id="userListTable" class="mb-3">
+                    선택해주세요
+                </div>
+                <button class="btn btn-primary" onclick="getUserList()">회원정보 보기</button>
+                <button class="btn btn-secondary"><a th:href="@{/adminMail.do}">메일보내기</a></button>
+                <button class="btn btn-secondary"><a th:href="@{/addProduct.do}">상품추가하기</a></button>
+                <button class="btn btn-secondary"><a th:href="@{/addCategory.do}">카테고리 추가하기</a></button>
+                <button class="btn btn-secondary"><a th:href="@{/productList.do}">상품목록 조회</a></button>
+                <button class="btn btn-secondary"><a th:href="@{/orderList.do}">주문 내역 조회</a></button>
+                <button class="btn btn-secondary"><a th:href="@{/productUpdate.do}">상품 수정</a></button>
+
+                <div th:if="${#authentication.isAuthenticated()}" class="mt-3">
+                    인증된 사용자입니다.
+                </div>
+                <div>
+                    인증 아이디: <span th:text="${#authentication.name}"></span>
+                </div>
+                <div>
+                    인증 유저네임: <span th:text="${#authentication.principal.username}"></span>
+                </div>
+            </div>
+        </div>
     </div>
-
-</div>
 </html>
