--- a/src/main/resources/templates/admin/adminProductList.html
+++ b/src/main/resources/templates/admin/adminProductList.html
@@ -2,25 +2,30 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>상품 목록 조회</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <title>상품 목록 조회</title>
 </head>
 <body>
-<div>
-    <table>
+<div class="container mt-5">
+    <table class="table">
+        <thead>
         <tr>
-            <td>ProductId</td>
-            <td>ProductName</td>
-            <td>ProductCondition</td>
-            <td>ProductPrice</td>
-            <td>ProductDescription</td>
-            <td>Img1</td>
-            <td>Img2</td>
-            <td>Img3</td>
-            <td>Img4</td>
-            <td>ProductCategory</td>
+            <th>ProductId</th>
+            <th>ProductName</th>
+            <th>ProductCondition</th>
+            <th>ProductPrice</th>
+            <th>ProductDescription</th>
+            <th>Img1</th>
+            <th>Img2</th>
+            <th>Img3</th>
+            <th>Img4</th>
+            <th>ProductCategory</th>
         </tr>
+        </thead>
+        <tbody>
         <tr th:each="product : ${products}">
             <td th:text="${product.productId}"></td>
             <td th:text="${product.productName}"></td>
@@ -33,11 +38,11 @@
             <td th:text="${product?.img4}"></td>
             <td th:text="${product.productCategoryId}"></td>
         </tr>
+        </tbody>
     </table>
 </div>
-<div>
-    <button><a th:href="@{/admin.do}">관리자 메인 페이지</a></button>
-
+<div class="container mt-3">
+    <button class="btn btn-primary"><a th:href="@{/admin.do}" class="text-white">관리자 메인 페이지</a></button>
 </div>
 </body>
 </html>
