--- a/src/main/resources/templates/post_write.html
+++ b/src/main/resources/templates/post_write.html
@@ -36,7 +36,7 @@
                         <col style="width:15%;" /><col style="width:35%;" /><col style="width:15%;" /><col style="width:35%;" />
                     </colgroup>
 
-
+                    <tbody>
                     <tr>
                         <th scope="row">공지글</th>
                         <td><span class="chkbox"><input type="checkbox" id="isNotice" name="isNotice" class="chk" /><i></i><label for="isNotice"> 설정</label></span></td>
@@ -81,116 +81,145 @@
             </form>
             <p class="btn_set">
                 <button type="button" id="saveBtn" onclick="savePost();" class="btns btn_st3 btn_mid">저장</button>
-                <a th:href="@{/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
+                <button type="button" onclick="goListPage();" class="btns btn_bdr3 btn_mid">뒤로</button>
             </p>
         </section>
     </div> <!--/* .content */-->
 </th:block>
 
 <th:block layout:fragment="script">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script th:inline="javascript">
-        window.onload = () => {
-            renderPostInfo();
+        /*<![CDATA[*/
 
-            findAllFile();
-        }
+               // 파일 삭제 처리용 익명 함수
+               const removeFileId = (function() {
+                   const ids = [];
+                   return {
+                       add(id) {
+                           if (ids.includes(id)) {
+                               return false;
+                           }
+                           ids.push(id);
+                       },
+                       getAll() {
+                           return ids;
+                       }
+                   }
+               }());
 
+               window.onload = () => {
+                   renderPostInfo();
 
-        // 전체 파일 조회
-        function findAllFile() {
-
-            // 1. 신규 등록/수정 체크
-            const post = [[ ${post}]];
-            if ( !post ) {
-                return false;
-            }
-
-            // 2. API 호출
-            const response = `/${post.id}/files`;
-            // 3. 로직 종료
-            if ( !response.length ) {
-                return false;
-            }
-
-            // 4. 업로드 영역 추가
-            for (let i = 0, len = (response.length - 1); i < len; i++) {
-                addFile();
-            }
-
-            // 5. 파일 선택 & 삭제 이벤트 재선언 & 파일명 세팅
-            const filenameInputs = document.querySelectorAll('.file_list input[type="text"]');
-            filenameInputs.forEach((input, i) => {
-                const fileInput = input.nextElementSibling.firstElementChild;
-                const fileRemoveBtn = input.parentElement.nextElementSibling;
-                fileInput.setAttribute('onchange', `selectFile(this, ${response[i].id})`);
-                fileRemoveBtn.setAttribute('onclick', `removeFile(this, ${response[i].id})`);
-                input.value = response[i].originalName;
-            })
-        }
+                   findAllFile();
+               }
 
 
-
-
-
-         //게시글 상세정보 렌더링
-            function renderPostInfo() {
-            const post = [[ ${post} ]];
-
-            if ( !post ) {
-                initCreatedDate();
-                return false;
-            }
-
-            const form = document.getElementById('saveForm');
-            const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
-            form.isNotice.checked = post.noticeYn;
-            form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
-
-
-            fields.forEach(field => {
-                form[field].value = post[field];
-            })
-        }
-
-
-        // 등록일 초기화
-        function initCreatedDate() {
-            document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD HH:mm');
-        }
-
-
-        // 게시글 저장(수정)
-
-        function savePost() {
-            const form = document.getElementById('saveForm');
-            const fields = [form.title, form.writer, form.content];
-            const fieldNames = ['제목', '이름', '내용'];
-            alert("저장하시겠습니까?") //작동함
-
-            document.getElementById('saveBtn').disabled = true;
-            form.noticeYn.value = form.isNotice.checked;
-            form.removeFileIds.value = removeFileId.getAll().join();
-            form.action = [[ ${post == null} ]] ? '/save.do' : '/update.do';
-            form.submit();
-
-        }
-            // 파일 삭제 처리용 익명 함수
-        const removeFileId = (function() {
-            const ids = [];
-            return {
-                add(id) {
-                    if (ids.includes(id)) {
-                        return false;
-                    }
-                    ids.push(id);
-                },
-                getAll() {
-                    return ids;
+               // 전체 파일 조회
+               function findAllFile() {
+                const post = [[ ${post}]];
+                if ( !post ) {
+                    return false;
                 }
-            }
-        }());
-    // 파일 선택
-        function selectFile(element) {
+                const response = getJson(`/${post.id}/files`);
+
+                function getJson(uri, params) {
+
+                let json = {}
+
+                $.ajax({
+                url : uri,
+                type : 'get',
+                dataType : 'json',
+                data : params,
+                async : false,
+                success : function (response) {
+                    json = response;
+                },
+                error : function (request, status, error) {
+                    console.log(error)
+                    }
+                })
+
+                        return json;
+              }
+
+                   // 3. 로직 종료
+                   if ( !response.length ) {
+                       return false;
+                   }
+
+                   // 4. 업로드 영역 추가
+         for (let i = 0, len = (response.length-1); i < len; i++) {
+                           addFile();
+                       }
+
+
+                   // 5. 파일 선택 & 삭제 이벤트 재선언 & 파일명 세팅
+                   const filenameInputs = document.querySelectorAll('.file_list input[type="text"]');
+                   filenameInputs.forEach((input, i) => {
+                       const fileInput = input.nextElementSibling.firstElementChild;
+                       const fileRemoveBtn = input.parentElement.nextElementSibling;
+                       fileInput.setAttribute('onchange', `selectFile(this, ${response[i].id})`);
+                       fileRemoveBtn.setAttribute('onclick', `removeFile(this, ${response[i].id})`);
+                       input.value = response[i].originalName;
+                   })
+               }
+
+
+
+
+
+                //게시글 상세정보 렌더링
+                   function renderPostInfo() {
+                   const post = [[ ${post} ]];
+
+                   if ( !post ) {
+                       initCreatedDate();
+                       return false;
+                   }
+
+                   const form = document.getElementById('saveForm');
+                   const fields = ['id', 'title', 'content', 'writer', 'noticeYn'];
+                   form.isNotice.checked = post.noticeYn;
+                   form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
+
+
+                   fields.forEach(field => {
+                       form[field].value = post[field];
+                   })
+               }
+
+
+               // 등록일 초기화
+               function initCreatedDate() {
+                   document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD HH:mm');
+               }
+
+
+               // 게시글 저장(수정)
+
+               function savePost() {
+                   const form = document.getElementById('saveForm');
+                   const fields = [form.title, form.writer, form.content];
+                   const fieldNames = ['제목', '이름', '내용'];
+
+                   document.getElementById('saveBtn').disabled = true;
+                   form.noticeYn.value = form.isNotice.checked;
+                   form.removeFileIds.value = removeFileId.getAll().join();
+                   form.action = [[ ${post == null} ]] ? '/save.do' : '/update.do';
+                   form.submit();
+
+               }
+
+                   // 게시글 리스트 페이지로 이동
+                   function goListPage() {
+                       const queryString = new URLSearchParams(location.search);
+                       queryString.delete('id');
+                       location.href = '/list.do' + '?' + queryString.toString();
+                   }
+               // 파일 선택
+    function selectFile(element, id) {
 
         const file = element.files[0];
         const filename = element.closest('.file_input').firstElementChild;
@@ -212,10 +241,14 @@
 
         // 3. 파일명 지정
         filename.value = file.name;
+
+        // 4. 삭제할 파일 id 추가
+        if (id) {
+            removeFileId.add(id);
+        }
     }
 
-
-    // 파일 추가
+               // 파일 추가
     function addFile() {
         const fileDiv = document.createElement('div');
         fileDiv.innerHTML =`
@@ -231,8 +264,15 @@
     }
 
 
-    // 파일 삭제
-    function removeFile(element) {
+               // 파일 삭제
+    function removeFile(element, id) {
+
+        // 1. 삭제할 파일 id 추가
+        if (id) {
+            removeFileId.add(id);
+        }
+
+        // 2. 파일 영역 초기화 & 삭제
         const fileAddBtn = element.nextElementSibling;
         if (fileAddBtn) {
             const inputs = element.previousElementSibling.querySelectorAll('input');
@@ -241,7 +281,7 @@
         }
         element.parentElement.remove();
     }
-            /*]]>*/
+                   /*]]>*/
     </script>
 </th:block>
 </html>
