--- a/src/main/resources/templates/post_write.html
+++ b/src/main/resources/templates/post_write.html
@@ -51,8 +51,8 @@
                     </tr>
 
                     <tr>
-                        <th>이름 <span class="es">필수 입력</span></th>
-                        <td colspan="3"><input type="text" id="writer" name="writer" maxlength="10" placeholder="이름을 입력해 주세요." /></td>
+                        <th>이름 <span class="es"></span></th>
+                        <td colspan="3"><input type="text" id="writer" name="writer" maxlength="10"readonly th:value="${#authentication.name}"/></td>
                     </tr>
 
                     <tr>
@@ -202,6 +202,7 @@
                function savePost() {
                    const form = document.getElementById('saveForm');
                    const fields = [form.title, form.writer, form.content];
+
                    const fieldNames = ['제목', '이름', '내용'];
 
                    document.getElementById('saveBtn').disabled = true;
