등록 오류 임시 수정

--- a/src/main/resources/templates/admin/productUpdate.html
+++ b/src/main/resources/templates/admin/productUpdate.html
@@ -35,26 +35,26 @@
             <label for="productDescription" class="form-label">상품 설명:</label>
             <textarea name="productDescription" id="productDescription" class="form-control"></textarea>
         </div>
-        <div class="mb-3">
-            <label for="imgs" class="form-label">상품 이미지:</label>
-            <input type="file" name="imgs" class="form-control image-input">
-        </div>
-        <p th:name="filePath1"></p>
-        <div class="mb-3">
-            <label for="imgs" class="form-label">상품 이미지:</label>
-            <input type="file" name="imgs" class="form-control image-input">
-        </div>
-        <p th:name="filePath2"></p>
-        <div class="mb-3">
-            <label for="imgs" class="form-label">상품 이미지:</label>
-            <input type="file" name="imgs" class="form-control image-input">
-        </div>
-        <p th:name="filePath3"></p>
-        <div class="mb-3">
-            <label for="imgs" class="form-label">상품 이미지:</label>
-            <input type="file" name="imgs" class="form-control image-input">
-        </div>
-        <p th:name="filePath4"></p>
+       	<div class="mb-3">
+				<label for="img1" class="form-label">상품 이미지:</label>
+				<input type="file" name="imgs" id="img1" class="form-control image-input">
+			</div>
+			<p th:name="filePath1"></p>
+			<div class="mb-3">
+				<label for="img2" class="form-label">상품 이미지:</label>
+				<input type="file" name="imgs" id="img2" class="form-control image-input">
+			</div>
+			<p th:name="filePath2"></p>
+			<div class="mb-3">
+				<label for="img3" class="form-label">상품 이미지:</label>
+				<input type="file" name="imgs" id="img3" class="form-control image-input">
+			</div>
+			<p th:name="filePath3"></p>
+			<div class="mb-3">
+				<label for="img4" class="form-label">상품 이미지:</label>
+				<input type="file" name="imgs" id="img4" class="form-control image-input">
+			</div>
+			<p th:name="filePath4"></p>
         <div class="mb-3">
             <label for="productCategoryId" class="form-label">상품 카테고리:</label>
             <select name="productCategoryId" id="productCategoryId" class="form-select">
